add git repository

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "vue ssr",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/wuhaosky/vue_ssr_step1.git"
   },
   "author": {
     "name": "wuhaosky",
