--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "webpack-dev-server": "^2.4.2"
   },
   "scripts": {
-    "start": "node devserver.js",
-    "build": "webpack --config ./webpack.config.js"
+    "app": "node app.js"
   },
   "bugs": {
     "url": "http:///issues"
